// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection entity type checking should execute the default outputType reducer before a custom outputType reducer  1`] = `
[Error: Entity type check failed!
Expected type: array
Actual type: object
Input value: {}]
`;

exports[`Collection entity type checking should throw error from a custom outputType reducer 1`] = `[Error: custom type check failed]`;

exports[`Collection entity type checking should throw error from default outputType reducer when output is not valid 1`] = `
[Error: Entity type check failed!
Expected type: array
Actual type: object
Input value: { c: [ 1, 2, 3 ] }]
`;
